--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -53,6 +53,10 @@
             justify-content: center;
             align-items: center;
             padding: 1em;
+
+            border-radius: 0.8em;
+
+            
             
         }
 
