--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -80,6 +80,7 @@
             grid-template-columns: 1fr;
             grid-auto-rows: minmax(400px, auto);
             background-color: coral;
+            justify-content: center;
 
             
             
