--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -229,16 +229,18 @@
             padding: 1em;
 
             border-radius: 0.8em;
-
-            
-            
-        }
+            transition: 1s;
+    
+        }    
 
         .wrapper > div {
             background-color: #ddd;
             padding: 1em;
-            font-size: 25px;
-            
+            font-size: 25px;    
+        }
+
+        .wrapper:hover{
+            transform: rotateY(360deg);
         }
 
         /* .wrapper > div:nth-child(odd) {
