--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -310,11 +310,13 @@
         
         .box > img{
             width: 100%;
+            height: 100%;
         }
         
         .box{
-            background-color: rgb(41, 38, 38);
-            padding: 120px;
+            /* background-color: rgb(41, 38, 38); */
+            background-color: #333646;
+            padding: 70px;
             margin: 10px;
             /* we can use anmation here too like :  animation: forward;*/
             animation: forward;
@@ -342,3 +344,103 @@
         .grid-wrapper {
             margin-top: 3em;
         }
+
+        /*------------------------------------------------------Certification--------------------------------------------------------*/
+        .certificate{
+            grid-column: 2/span 10;
+            grid-row: 3;
+        }
+        .certificatetitle{
+            text-align: center;
+            font-size: 3em;
+            margin-bottom: 1.5em;
+        }
+        .certi_title{
+            color: white;
+            text-align: center;
+        }
+        /*------------------------project section----------------------------------*/
+        .projects{
+            margin-top: 4em;
+            grid-column: 2/span 10;
+        }
+        .project_heading{
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 1.5em;
+        }
+        /*--cards for projects--*/
+        .cards{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .card{
+            display: flex;
+            flex-direction: column;
+            flex:1 0 300px;
+            padding: 0.5em;
+            margin: 0.5em;
+            overflow: hidden;
+            background: var(--light-color)  ;
+            max-width: 364px;
+            
+            transition: ease-in-out 0.3s;  /*----hover effects for the cards------*/
+            
+            }
+        .card:hover{
+            transform: scale(1.06);
+        }
+        .certi_card{
+            background: #333646; /* for the certificate background #292626*/
+        }
+        .card_image{
+            flex:0 0 250px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position:left;
+            border-radius: 10px;
+            margin: 15px;
+            
+        }
+        .card_content{
+            display:flex;
+            flex-direction: column;
+            height: 100%;
+            padding: 0.5em;
+        }
+        .card_title{
+        font-size: 1.2em;
+        font-weight: bold;
+        margin-bottom:0.5em;
+        }
+        .card_details{
+            font-size: 1em;
+            margin-bottom:0.5em;
+
+        }
+
+        .link{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background:var(--background);
+            border-radius: 10px;
+            text-decoration: none;
+            width: 150px;
+            margin-top: auto;
+            flex:0 0 40px;
+            color: black;
+        }
+        .certi_link{
+            width: auto;
+        }
+        .ltext{
+            font-size: 1.5em;
+ 
+        }
+
+
+        /*------------------------------------------------------Certification ENDS HERE--------------------------------------------------------*/
+    
+        
