--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -20,7 +20,7 @@
                 } */
                 nav{
                     position: absolute;
-                    text-align: left;
+                    text-align: center;
                     top: 100%;
                     left: 0;
                     background-color: #FFC25C;
