--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -27,12 +27,14 @@
                     transform: scale(1,0); 
                     transform-origin: top;
                     transition: 400ms ease-in-out;
+                    font-family: 'Allerta Stencil'; /*date: 07/04/22*/
                 }
         
                 nav ul{
                     margin: 0;
                     padding: 0;
                     list-style: none;  
+                    font-family: 'Allerta Stencil'; /*date: 07/04/22*/
                 }
                 nav li{
                     margin-bottom: 1em;
@@ -109,6 +111,7 @@
                     }
                     .logo{
                         grid-column: 2 / 3;
+                        font-family: 'Aladin'; /*date: 07/04/22*/
                     }
                     nav{
                         all: unset;
