--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -98,6 +98,7 @@
                     left: 0;
                     margin-left: 1em;
                     /* border: 1px solid black; */
+                    background-color: black;
                     height: 100%;
                     display: flex;
                     align-items: center;
@@ -106,7 +107,7 @@
                 .nav-toggle-label span::before,
                 .nav-toggle-label span::after{
                     display: block;
-                    background: black;
+                    background: white;
                     height: 2px;
                     width: 2em;
                     border-radius: 2px;
@@ -134,6 +135,7 @@
                     }
                     .logo{
                         grid-column: 2 / 3;
+                        color: white;
                         font-family: 'Aladin'; /*date: 07/04/22*/
                         letter-spacing: 2px; /*date: 07/04/22*/
                         font-size: 32px; /*date: 07/04/22*/
