--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -185,6 +185,16 @@
                     .self{
                         font-size: 1.5em;
                     }
+                    .certificatetitle{
+                        text-align: center;
+                        font-size: 6em !important; 
+                        margin-bottom: 1.5em;
+                        color: black;
+                        background-color: white;
+                        font-family: 'Allerta Stencil';  
+                        font-weight: bold;
+                        margin-top: 0.5em;
+                    }
         
                 }
         
@@ -364,10 +374,12 @@
         }
         .certificatetitle{
             text-align: center;
-            font-size: 3em;
+            font-size: 4em;
             margin-bottom: 1.5em;
             color: black;
             background-color: white;
+            font-family: 'Allerta Stencil';  
+            font-weight: bold;
         }
         .certi_title{
             color: white;
