--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -297,6 +297,10 @@
             letter-spacing: 1.5px;
             animation: fadeIn ease-in 1.5s;
         }
+        .c2>h2{
+            text-decoration: underline;
+            
+        }
 
 
         .jimmy{
