--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -3,6 +3,9 @@
             background-color: #121221;
             margin: 0;  
         }
+        html{
+            scroll-behavior: smooth;
+        }
 
         /*______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________*/
 
