photo_issue_resolved

--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -242,7 +242,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             /*grid-auto-rows: minmax(200px, auto);*/
-            /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
             margin: 10vh 20vw 10vh;
             background-color: #121221;
             justify-content: center;
