--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -1,6 +1,6 @@
 
         body {
-            background-color: #121221;
+            background-color: #131313;
             margin: 0;  
         }
         html{
@@ -247,18 +247,18 @@
             /*grid-auto-rows: minmax(200px, auto);*/
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
             margin: 10vh 20vw 10vh;
-            background-color: #121221;
+            background-color: #131313;
             justify-content: center;
             align-items: center;
-            padding: 1em;
+            /* padding: 1em; */
             border-radius: 0.8em;
 
             /* box-shadow: 0px 0px 40px 1.5px #fab443; */
         }    
 
         .wrapper > div {
-            background-color: #121221;
-            padding: 0.65em;
+            background-color: #131313;
+            /* padding: 0.65em; */
             font-size: 25px;    
         }
         /* .wrapper:hover{
@@ -273,13 +273,13 @@
             display: grid;
             grid-template-columns: 1fr;
             grid-auto-rows: minmax(400px, auto);
-            background-color: #121221;
+            background-color: #131313;
             justify-content: center;
         }
 
         .c1{
             border-radius: 1em 0em 0em 1em;
-            padding: 0;
+            padding: 1em;
         }
         .c1>.jimmy{
             width: 100%;
@@ -298,16 +298,23 @@
         .c2{
             border-radius: 0em 1em 1em 0em;
             color: #ddd;
-            padding: 0;
+            padding: 1em;
             font-family: 'Cabin';
-            letter-spacing: 1.5px;
+            /* letter-spacing: 1.5px; */
             animation: fadeIn ease-in 1.5s;
         }
         .c2>h2{
             text-align: center;
+            font-family: 'Allerta Stencil';
+            font-size: 41px;
+            color: #87BFFF;
         }
         .c2>div{
-            text-align: center;
+            text-align: left;
+            font-size: 22px;
+            font-family: Sora, sans-serif;
+            color: #737D8E;
+            letter-spacing: 1.5px;
         }
         /* .c2>h2{
             text-decoration: underline;
@@ -366,7 +373,7 @@
         }
         
         .blue{
-            background: #121221; /* Old browsers */
+            background: #131313; /* Old browsers */
             /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,coral), color-stop(44%, orange), color-stop(100%, crimson));  */
             
             /* Chrome,Safari4+ */
@@ -520,7 +527,7 @@
         }
 
         .contact_info{
-            font-family:"Fira Sans Extra Condensed", sans-serif;
+            font-family: 'Allerta Stencil';
             /* font-size: 1.5em; */
             margin: 0 1em 1em 1em; 
         }
