--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -98,11 +98,15 @@
                 .nav-toggle-label{
                     position: absolute;
                     top: 0;
-                    left: 0;
-                    margin-left: 1em;
+                    right: 0;
+                    margin-right: 1em;
+                    border: solid 3px white;
+                    padding: 5px;
+                    border-radius: 5px;
+                    margin-top: 2vh;
                     /* border: 1px solid black; */
                     background-color: black;
-                    height: 100%;
+                    height: 50%;
                     display: flex;
                     align-items: center;
                 }
