--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -566,12 +566,12 @@
         /*-----------hover effects for the social icons------------*/
         
         .fa-brands{
-            transition: ease-in-out 0.2s;
+            transition: ease-in-out 0.3s;
         }
         .fa-brands:hover{
             transform: scale(1.2);
             /* box-shadow: 0px 0px 15px 5px #727896; */
-            box-shadow: 0px 0px 40px 1.5px #fab443;
+            /* box-shadow: 0px 0px 40px 1.5px #fab443; */
         }
         /*-----------hover effects for the social icons ends------------*/
 
