--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -548,7 +548,7 @@
         /*----------------------footer section---ENDING---------------*/
         .social_list{
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             list-style: none;
             font-size: 1.5em;
             margin: 0.5em auto;
