--- a/GridUse_for_prac1.css
+++ b/GridUse_for_prac1.css
@@ -1,5 +1,99 @@
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Righteous", cursive;
+  min-height: 100vh;
+  background-color: black;
+}
+body .container-z {
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 35px;
+    margin: 0 auto;
+    padding: 40px 60px;
+  }
+  body .container-z .card-z {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    margin: 0 auto;
+    background: #403233;
+    border-radius: 15px;
+    box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
+  }
+body .container-z .card-z .face {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  body .container-z .card-z .face.face1 {
+    box-sizing: border-box;
+    padding: 20px;
+  }
+  body .container-z .card-z .face.face1 .h3 {
+    margin: 0;
+    padding: 0;
+    
+  }
+  body .container-z .card-z .face.face1 .java {
+    /* background-color: #f9b234; */
+    background-color: #f26a00;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  body .container-z .card-z .face.face1 .python {
+    background-color: #f24400;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  body .container-z .card-z .face.face1 .cSharp {
+    background-color: #DC5F00;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  body .container-z .card-z .face.face2 {
+    transition: 0.5s;
+  }
+  body .container-z .card-z .face.face2 .h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 2.7em;
+    color: #403233;
+    transition: 0.5s;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+  }
+  body .container-z .card-z:hover .face.face2 {
+    height: 60px;
+  }
+  body .container-z .card-z:hover .face.face2 .h3 {
+    font-size: 2em;
 
-        body {
+  }
+  body .container-z .card-z:nth-child(1) .face.face2 {
+    background-color: #f26a00; 
+    border-radius: 15px;
+  }
+  body .container-z .card-z:nth-child(2) .face.face2 {
+    background-color: #f24400; 
+    border-radius: 15px;
+  }
+  body .container-z .card-z:nth-child(3) .face.face2 {
+    background-color: #f2a100; 
+    border-radius: 15px;
+  }
+
+
+
+
+      body {
             background-color: #131313;
             margin: 0;  
         }
